test/Feature/Output/InAndOutOfBounds.c.tmp.klee-out/test000001.ptr.err
Error: memory error: out of bound pointer
File: /home/sanghu/TracerX/tracerx/test/Feature/InAndOutOfBounds.c
Line: 19
assembly.ll line: 61
Stack: 
	#000000061 in main () at /home/sanghu/TracerX/tracerx/test/Feature/InAndOutOfBounds.c:19
Info: 
	address: (Add w64 36399248
          (Mul w64 4
                   (ZExt w64 (ReadLSB w32 0 unnamed))))
	example: 36399252
	range: [36399252, 36399252]
	next: object at 36488880 of size 15
		MO8[15] allocated at global:.str1
	prev: object at 36399248 of size 4
		MO19[4] allocated at main():  %2 = call i8* @malloc(i64 4), !dbg !132
