test/Feature/Output/InAndOutOfBounds.c.tmp.klee-out/test000001.pc
array unnamed[4] : w32 -> w8 = symbolic
(query [(Eq false
             (Ule 2
                  N0:(ReadLSB w32 0 unnamed)))
         (Eq false
             (Ult (Mul w64 4 (ZExt w64 N0))
                  1))]
        false)
